added scripts for audio feature generation, audio-based grounding, and frame-based grounding

--- a/src/scripts/single_video_audio_visualization.ipynb
+++ b/src/scripts/single_video_audio_visualization.ipynb
@@ -1014,29 +1014,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#HIGH PRIORITY:\n",
-    "# TODO: Revamp EgoVLP video feature extraction according to notes in generate_frame_grounding.ipynb. \n",
-    "#TODO: Consistent hyperparams across all; put in separate config file? (yes, figure out best way to do this)\n",
-    "    #6) Think about how to evaluate for all videos (not just P01_01): Should we just call generate\n",
-    "#4) TODO: think of appropriate baselines => Random audio assignment is one, others should focus on \n",
-    "\n",
-    "#LOW PRIORITY:\n",
+    "#Conceptual TODOs:\n",
     "#TODO: add in the video for visualization as well? Maybe the plot scrolls by as the video plays.\n",
-    "#TODO: add another row for visualizing the audio events themselves.\n",
-    "#TODO: Load in video duration in generation script from video length of video_id.mp4\n",
-    "#TODO: Expand to other video ids for which we have annotations.\n",
-    "\n",
-    "#TODO: Need to convert .ipynb's to .py files, need to centralize params with a yaml passed in to them, need to cudaize all operations\n",
-    "#so that they can be run on \n",
-    "#TODO: Eventually merging\n",
     "#TODO: Think about data collection -> Do we want to just annotate test set narration segments, or do we also want epic-sounds style\n",
     "#audio annotations for training?\n",
     "#TODO: Think about fine-tuning llama on audio descriptions + visual narrations; these are time-synched so there is something we can do with them.\n",
-    "#TODO: Think about sounding actions; where does that fit in? How can we use sounding actions here\n",
     "#TODO: How does this all inform our model architecture? Come up with concrete insights from experiments first, then think about model\n",
     "#architecture changes. Key things are; if we are operating on audio feature space, how can we incentivize the behavior we want \n",
-    "#here? What supervision would do this?\n",
-    "# Where do separating chirp and chat and TIM fall in? These are"
+    "#here? What supervision would do this?"
    ]
   },
   {
@@ -1045,13 +1030,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Miscellaneous Ideas:\n",
+    "\"\"\" \n",
+    "Concrete TOODs:\n",
+    "6) Evaluate audio grounding using features from Sounding Actions => You can keep still the cosine similarity framework code,\n",
+    " but use his modality encoders to produce features for direct cosine sim evaluation. (Medium)\n",
     "\n",
-    "#Try expanding the examples to also contain multiple narrations, and specify an action sound following that, then put the -> to the correct narration.\n",
-    "#Try asking Llama \"does this narrration make a sound?\"\n",
+    "4) Set up training of CliMER on epic-kitchens. (Figure out batch srun scripts, saving to /checkpoints, etc.) (Medium)\n",
+    "5) Train CliMER on Omnivore and BERT features on EK-100 and evaluate on EK100. This should be a baseline. (Medium)\n",
     "\n",
-    "#Sometimes a sequence of action sounds correspond to a single narration, where you cannot identify each component action sound as being part of the narration, but\n",
-    "#the composite action sounds are there."
+    "7) Train/Evaluate CliMER on EgoExo4D exo-view of cooking (Hard)\n",
+    " \"\"\""
    ]
   },
   {
